--- a/AllArticles.html
+++ b/AllArticles.html
@@ -1,7 +1,7 @@
 ﻿
 <html>
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-<link rel="stylesheet" href="github-markdown.css">
+<link rel="stylesheet" href="http://kbilsted.github.io/CodeQualityAndReadability/github-markdown.css">
 <style>
       .markdown-body {
                 min-width: 200px;
@@ -14,19 +14,25 @@
 
 <h1 id="code-quality--readability">Code Quality &amp; Readability</h1>
 <p><em>A site (mostly) by Kasper B. Graversen</em>
-<br><a href="https://github.com/kbilsted/CodeQualityAndReadability">[Introduction]</a> <a href="https://github.com/kbilsted/CodeQualityAndReadability/AllTags.html">[All categories]</a> <a href="https://github.com/kbilsted/CodeQualityAndReadability/AllArticles.html">[All articles]</a></p>
+<br><a href="http://kbilsted.github.io/CodeQualityAndReadability/">[Introduction]</a> <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllTags.html">[All categories]</a> <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllArticles.html">[All articles]</a></p>
 <h2 id="all-articles-on-the-site">All articles on the site</h2>
-<p><strong>Articles/BookReviews</strong>
-* [Book review: Adaptive Code via C#](Articles/BookReviews/Adaptive Code via CS.html.html)
-* <a href="Articles/BookReviews/ObjectThinking.html.html">Book review: Object Thinking</a></p>
-<p><strong>Articles/Design</strong>
-* <a href="Articles/Design/DomainTypeAndEmergentBehaviour.html.html">Domain types creates readability ...and emergent behaviour</a>
-* <a href="Articles/Design/MalleableCodeUsingDecorators.html.html">Malleable code by using decorators</a>
-* <a href="Articles/Design/StepwiseRefinementOfCode.html.html">Stepwise refinement of code</a></p>
-<p><strong>Articles/Readability</strong>
-* <a href="Articles/Readability/TheChangingNotionOfReadability.html.html">On the changing notion of code readability</a>
-* <a href="Articles/Readability/OptimalIndentSizeForCodeReadability.html.html">Optimal indent size for code readability</a>
-* <a href="Articles/Readability/ProductivityFeaturesThatMayRuinCodeReadability.html.html">Productivity features that may ruin code readability</a></p>
+<p><strong>Articles/BookReviews</strong></p>
+<ul>
+<li><a href="Articles/BookReviews/AdaptiveCodeviaCS.html">Book review: Adaptive Code via C#</a></li>
+<li><a href="Articles/BookReviews/ObjectThinking.html">Book review: Object Thinking</a></li>
+</ul>
+<p><strong>Articles/Design</strong></p>
+<ul>
+<li><a href="Articles/Design/DomainTypeAndEmergentBehaviour.html">Domain types creates readability ...and emergent behaviour</a></li>
+<li><a href="Articles/Design/MalleableCodeUsingDecorators.html">Malleable code by using decorators</a></li>
+<li><a href="Articles/Design/StepwiseRefinementOfCode.html">Stepwise refinement of code</a></li>
+</ul>
+<p><strong>Articles/Readability</strong></p>
+<ul>
+<li><a href="Articles/Readability/TheChangingNotionOfReadability.html">On the changing notion of code readability</a></li>
+<li><a href="Articles/Readability/OptimalIndentSizeForCodeReadability.html">Optimal indent size for code readability</a></li>
+<li><a href="Articles/Readability/ProductivityFeaturesThatMayRuinCodeReadability.html">Productivity features that may ruin code readability</a></li>
+</ul>
 
 
 </article>
