--- a/AllTags.html
+++ b/AllTags.html
@@ -1,7 +1,7 @@
 ﻿
 <html>
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-<link rel="stylesheet" href="github-markdown.css">
+<link rel="stylesheet" href="http://kbilsted.github.io/CodeQualityAndReadability/github-markdown.css">
 <style>
       .markdown-body {
                 min-width: 200px;
@@ -14,30 +14,46 @@
 
 <h1 id="code-quality--readability">Code Quality &amp; Readability</h1>
 <p><em>A site (mostly) by Kasper B. Graversen</em>
-<br><a href="https://github.com/kbilsted/CodeQualityAndReadability">[Introduction]</a> <a href="https://github.com/kbilsted/CodeQualityAndReadability/AllTags.html">[All categories]</a> <a href="https://github.com/kbilsted/CodeQualityAndReadability/AllArticles.html">[All articles]</a></p>
+<br><a href="http://kbilsted.github.io/CodeQualityAndReadability/">[Introduction]</a> <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllTags.html">[All categories]</a> <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllArticles.html">[All articles]</a></p>
 <h2 id="all-categories-on-the-site">All categories on the site</h2>
-<p>B
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Book_Review.html"><img src="https://img.shields.io/badge/-Book_Review-3c8700.svg" alt="Tag" /></a></p>
-<p>C
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Cache.html"><img src="https://img.shields.io/badge/-Cache-3dda0b.svg" alt="Tag" /></a>
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Code_Layout.html"><img src="https://img.shields.io/badge/-Code_Layout-e41098.svg" alt="Tag" /></a>
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Code_Readability.html"><img src="https://img.shields.io/badge/-Code_Readability-2cbbe2.svg" alt="Tag" /></a></p>
-<p>D
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Decorator.html"><img src="https://img.shields.io/badge/-Decorator-1549c6.svg" alt="Tag" /></a>
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Design.html"><img src="https://img.shields.io/badge/-Design-eee6bb.svg" alt="Tag" /></a>
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Design_Pattern.html"><img src="https://img.shields.io/badge/-Design_Pattern-9e89d7.svg" alt="Tag" /></a>
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Domain_Types.html"><img src="https://img.shields.io/badge/-Domain_Types-400cdb.svg" alt="Tag" /></a></p>
-<p>E
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Emergent_Behaviour.html"><img src="https://img.shields.io/badge/-Emergent_Behaviour-80b3ec.svg" alt="Tag" /></a></p>
-<p>R
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Refactoring.html"><img src="https://img.shields.io/badge/-Refactoring-c6dc6b.svg" alt="Tag" /></a></p>
-<p>S
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Single_Responsibility_Principle.html"><img src="https://img.shields.io/badge/-Single_Responsibility_Principle-27d630.svg" alt="Tag" /></a>
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/SOLID.html"><img src="https://img.shields.io/badge/-SOLID-815bee.svg" alt="Tag" /></a></p>
-<p>T
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Tools.html"><img src="https://img.shields.io/badge/-Tools-5d59a2.svg" alt="Tag" /></a></p>
-<p>W
-* <a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Wrapper.html"><img src="https://img.shields.io/badge/-Wrapper-7d8750.svg" alt="Tag" /></a></p>
+<p>B</p>
+<ul>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Book_Review.html"><img src="https://img.shields.io/badge/-Book_Review-3c8700.svg" alt="Tag" /></a></li>
+</ul>
+<p>C</p>
+<ul>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Cache.html"><img src="https://img.shields.io/badge/-Cache-3dda0b.svg" alt="Tag" /></a></li>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Code_Layout.html"><img src="https://img.shields.io/badge/-Code_Layout-e41098.svg" alt="Tag" /></a></li>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Code_Readability.html"><img src="https://img.shields.io/badge/-Code_Readability-2cbbe2.svg" alt="Tag" /></a></li>
+</ul>
+<p>D</p>
+<ul>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Decorator.html"><img src="https://img.shields.io/badge/-Decorator-1549c6.svg" alt="Tag" /></a></li>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Design.html"><img src="https://img.shields.io/badge/-Design-eee6bb.svg" alt="Tag" /></a></li>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Design_Pattern.html"><img src="https://img.shields.io/badge/-Design_Pattern-9e89d7.svg" alt="Tag" /></a></li>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Domain_Types.html"><img src="https://img.shields.io/badge/-Domain_Types-400cdb.svg" alt="Tag" /></a></li>
+</ul>
+<p>E</p>
+<ul>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Emergent_Behaviour.html"><img src="https://img.shields.io/badge/-Emergent_Behaviour-80b3ec.svg" alt="Tag" /></a></li>
+</ul>
+<p>R</p>
+<ul>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Refactoring.html"><img src="https://img.shields.io/badge/-Refactoring-c6dc6b.svg" alt="Tag" /></a></li>
+</ul>
+<p>S</p>
+<ul>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Single_Responsibility_Principle.html"><img src="https://img.shields.io/badge/-Single_Responsibility_Principle-27d630.svg" alt="Tag" /></a></li>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/SOLID.html"><img src="https://img.shields.io/badge/-SOLID-815bee.svg" alt="Tag" /></a></li>
+</ul>
+<p>T</p>
+<ul>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Tools.html"><img src="https://img.shields.io/badge/-Tools-5d59a2.svg" alt="Tag" /></a></li>
+</ul>
+<p>W</p>
+<ul>
+<li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Wrapper.html"><img src="https://img.shields.io/badge/-Wrapper-7d8750.svg" alt="Tag" /></a></li>
+</ul>
 
 
 </article>
