--- a/AllTags.html
+++ b/AllTags.html
@@ -54,6 +54,11 @@
 <ul>
 <li><a href="http://kbilsted.github.io/CodeQualityAndReadability/Tags/Wrapper.html"><img src="https://img.shields.io/badge/-Wrapper-7d8750.svg" alt="Tag" /></a></li>
 </ul>
+<p><br>
+<br>
+Read the <a href="http://kbilsted.github.io/CodeQualityAndReadability/">Introduction</a> or browse the rest <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllArticles.html">of the site</a>
+<br></p>
+
 
 
 </article>
