--- a/README.html
+++ b/README.html
@@ -16,9 +16,11 @@
 <p>By Kasper B. Graversen  </p>
 <p>A site providing information on achieving super readable and maintainable code.</p>
 <p>Notice we have moved. Please go to http://kbilsted.github.io/CodeQualityAndReadability/</p>
-<p>Read the <a href="http://kbilsted.github.io/CodeQualityAndReadability/">Introduction</a> or browse the rest <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllArticles.html">of the site</a>
+<p><br>
 <br>
-<a href="https://github.com/igrigorik/ga-beacon"><img src="https://ga-beacon.appspot.com/UA-65034248-2/QualityAndReadability/README.md" alt="Analytics" /></a></p>
+Read the <a href="http://kbilsted.github.io/CodeQualityAndReadability/">Introduction</a> or browse the rest <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllArticles.html">of the site</a>
+<br></p>
+
 
 
 </article>
