--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1 id="code-quality--readability">Code Quality &amp; Readability</h1>
 <p>By Kasper B. Graversen<br />
 <a href="AllArticles.html">[All articles]</a>  <a href="AllTags.html">[All tags]</a>  </p>
-<p>A site provifing information on achieving super readable and maintainable code.</p>
+<p>A site providing information on achieving super readable and maintainable code.</p>
 <p>Newest additions</p>
 <ul>
 <li><a href="Articles/ProductivityFeaturesThatMayRuinCodeReadability.html">Productivity features that may ruin code readability</a></li>
@@ -44,13 +44,12 @@ program directly impact its maintainability cost, and is thus a key factor in ov
 <p><br>
 <br>
 <br>
-<strong>Corrections and other editorial changes are very welcome. Just log onto Github, press the edit button and fire away.</strong></p>
-<p>Read the <a href="http://kbilsted.github.io/CodeQualityAndReadability/">Introduction</a> or browse the rest <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllArticles.html">of the site</a>
+<strong>Corrections and other editorial changes are very welcome. Just log onto Github, press the edit button and fire away. Have I left out important information about your favourite language, press the edit button. Are there wordings that definitely are not English, press the edit button. Do you have something to elaborate.. press the edit button!! :-)</strong></p>
+<p><br>
 <br>
-<a href="https://github.com/igrigorik/ga-beacon"><img src="https://ga-beacon.appspot.com/UA-65034248-2/QualityAndReadability/README.md" alt="Analytics" /></a></p>
-<p>Read the <a href="http://kbilsted.github.io/CodeQualityAndReadability/">Introduction</a> or browse the rest <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllArticles.html">of the site</a>
-<br>
-<a href="https://github.com/igrigorik/ga-beacon"><img src="https://ga-beacon.appspot.com/UA-65034248-2/QualityAndReadability/index.md" alt="Analytics" /></a></p>
+Read the <a href="http://kbilsted.github.io/CodeQualityAndReadability/">Introduction</a> or browse the rest <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllArticles.html">of the site</a>
+<br></p>
+
 
 
 </article>
