Added document title
Added Disqus footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ﻿
 <html>
+<head>
+<title>Code Quality & Readability</title>
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <link rel="stylesheet" href="http://kbilsted.github.io/CodeQualityAndReadability/github-markdown.css">
 <style>
@@ -10,6 +12,8 @@
                 padding: 30px;
             }
 </style>
+</head>
+<body>
 <article class="markdown-body">
 
 <h1 id="code-quality--readability">Code Quality &amp; Readability</h1>
@@ -22,7 +26,6 @@
 <li><a href="Articles/Readability/ProductivityFeaturesThatMayRuinCodeReadability.html">Productivity features that may ruin code readability</a></li>
 <li><a href="Articles/Readability/OptimalIndentSizeForCodeReadability.html">Optimal indent size for code readability</a></li>
 <li><a href="Articles/Readability/TheChangingNotionOfReadability.html">On the Changing Notion Of Readability</a></li>
-<li><a href="Articles/Design/StepwiseRefinementOfCode.html">Stepwise refinement of code</a></li>
 </ul>
 <h2 id="introduction">Introduction</h2>
 <blockquote>
@@ -43,7 +46,20 @@ program directly impact its maintainability cost, and is thus a key factor in ov
 <br>
 <br>
 <strong>Corrections and other editorial changes are very welcome. Just log onto Github, press the edit button and fire away. Have I left out important information about your favourite language, press the edit button. Are there wordings that definitely are not English, press the edit button. Do you have something to elaborate.. press the edit button!! :-)</strong></p>
-<p><br>
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'qualityandreadability';
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<p><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<br>
 <br>
 Read the <a href="http://kbilsted.github.io/CodeQualityAndReadability/">Introduction</a> or browse the rest <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllArticles.html">of the site</a>
 <br></p>
@@ -51,4 +67,5 @@ Read the <a href="http://kbilsted.github.io/CodeQualityAndReadability/">Introduc
 
 
 </article>
+</body>
 </html>
