--- a/README.html
+++ b/README.html
@@ -1,5 +1,7 @@
 ﻿
 <html>
+<head>
+<title>Code Quality & Readability</title>
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <link rel="stylesheet" href="http://kbilsted.github.io/CodeQualityAndReadability/github-markdown.css">
 <style>
@@ -10,6 +12,8 @@
                 padding: 30px;
             }
 </style>
+</head>
+<body>
 <article class="markdown-body">
 
 <h1 id="code-quality--readability">Code Quality &amp; Readability</h1>
@@ -24,4 +28,5 @@ Read the <a href="http://kbilsted.github.io/CodeQualityAndReadability/">Introduc
 
 
 </article>
+</body>
 </html>
