removed comments as a section

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  (function(i,s,o,g,r,a,m){{i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){{
+  (i[r].q=i[r].q||[]).push(arguments)}},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  }})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-66546851-1', 'auto');
   ga('send', 'pageview');
@@ -58,8 +58,10 @@ program directly impact its maintainability cost, and is thus a key factor in ov
 <br>
 <br>
 <br>
-<strong>Corrections and other editorial changes are very welcome. Just log onto Github, press the edit button and fire away. Have I left out important information about your favourite language, press the edit button. Are there wordings that definitely are not English, press the edit button. Do you have something to elaborate.. press the edit button!! :-)</strong></p>
-<div id="disqus_thread"></div>
+<strong>Corrections and other editorial changes are very welcome. <a href="https://github.com/kbilsted/CodeQualityAndReadability/blob/master/index.md">Just go to Github, press the edit button and fire away.</a> 
+Have I left out important information about your favourite language, press the edit button. Are there wordings that definitely are not English, press the edit button. 
+Do you have something to elaborate.. press the edit button!! :-)</strong></p>
+<p><br><div id="disqus_thread"></div></p>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = 'qualityandreadability';
