--- a/README.html
+++ b/README.html
@@ -2,8 +2,8 @@
 <head>
 <title>Code Quality & Readability</title>
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-<link rel="stylesheet" href="http://kbilsted.github.io/CodeQualityAndReadability/github-markdown.css">
-<link rel='shortcut icon' type='image/x-icon' href='http://kbilsted.github.io/CodeQualityAndReadability/favicon.ico' />
+<link rel="stylesheet" href="http://firstclassthoughts.co.uk/github-markdown.css">
+<link rel='shortcut icon' type='image/x-icon' href='http://firstclassthoughts.co.uk/favicon.ico' />
 <style>
       .markdown-body {
                 min-width: 200px;
@@ -35,7 +35,7 @@
 <p>Notice we have moved. Please go to http://kbilsted.github.io/CodeQualityAndReadability/</p>
 <p><br>
 <br>
-Read the <a href="http://kbilsted.github.io/CodeQualityAndReadability/">Introduction</a> or browse the rest <a href="http://kbilsted.github.io/CodeQualityAndReadability/AllArticles.html">of the site</a>
+Read the <a href="http://firstclassthoughts.co.uk/">Introduction</a> or browse the rest <a href="http://firstclassthoughts.co.uk/AllArticles.html">of the site</a>
 <br></p>
 
 
