Added Restrict expressibility when iterating

--- a/AllTags.html
+++ b/AllTags.html
@@ -42,6 +42,7 @@
 <li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Cache.html"><img src="https://img.shields.io/badge/-Cache-3dda0b.svg" alt="Tag" /></a></li>
 <li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Code_Layout.html"><img src="https://img.shields.io/badge/-Code_Layout-e41098.svg" alt="Tag" /></a></li>
 <li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Code_Readability.html"><img src="https://img.shields.io/badge/-Code_Readability-2cbbe2.svg" alt="Tag" /></a></li>
+<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Coding_Guideline.html"><img src="https://img.shields.io/badge/-Coding_Guideline-33ad2a.svg" alt="Tag" /></a></li>
 </ul>
 <p>D</p>
 <ul>
@@ -53,6 +54,23 @@
 <p>E</p>
 <ul>
 <li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Emergent_Behaviour.html"><img src="https://img.shields.io/badge/-Emergent_Behaviour-80b3ec.svg" alt="Tag" /></a></li>
+</ul>
+<p>F</p>
+<ul>
+<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/for.html"><img src="https://img.shields.io/badge/-for-8fd55c.svg" alt="Tag" /></a></li>
+<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/foreach.html"><img src="https://img.shields.io/badge/-foreach-731fa0.svg" alt="Tag" /></a></li>
+</ul>
+<p>G</p>
+<ul>
+<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/goto.html"><img src="https://img.shields.io/badge/-goto-29c802.svg" alt="Tag" /></a></li>
+</ul>
+<p>I</p>
+<ul>
+<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Iteration.html"><img src="https://img.shields.io/badge/-Iteration-df93a4.svg" alt="Tag" /></a></li>
+</ul>
+<p>L</p>
+<ul>
+<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Looping.html"><img src="https://img.shields.io/badge/-Looping-497012.svg" alt="Tag" /></a></li>
 </ul>
 <p>R</p>
 <ul>
@@ -69,6 +87,7 @@
 </ul>
 <p>W</p>
 <ul>
+<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/while.html"><img src="https://img.shields.io/badge/-while-6dd666.svg" alt="Tag" /></a></li>
 <li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Wrapper.html"><img src="https://img.shields.io/badge/-Wrapper-7d8750.svg" alt="Tag" /></a></li>
 </ul>
 <p><br>
