Added Restrict expressibility when iterating

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 <p><em>A site providing information on achieving super readable and maintainable code.</em></p>
 <p>Newest articles</p>
 <ul>
+<li><a href="Articles/Readability/RestrictExpressibilityWhenIterating.html">Restrict expressibility when iterating (new)</a></li>
 <li><a href="Articles/Readability/ProductivityFeaturesThatMayRuinCodeReadability.html">Productivity features that may ruin code readability</a></li>
 <li><a href="Articles/Readability/OptimalIndentSizeForCodeReadability.html">Optimal indent size for code readability</a></li>
-<li><a href="Articles/Readability/TheChangingNotionOfReadability.html">On the Changing Notion Of Readability</a></li>
 </ul>
 <h2 id="introduction">Introduction</h2>
 <blockquote>
