--- a/AllTags.html
+++ b/AllTags.html
@@ -35,60 +35,259 @@
 <h2 id="all-categories-on-the-site">All categories on the site</h2>
 <p>B</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Book_Review.html"><img src="https://img.shields.io/badge/-Book_Review-3c8700.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Book_Review.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #3c8700;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Book Review</a>
+</li>
 </ul>
 <p>C</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Cache.html"><img src="https://img.shields.io/badge/-Cache-3dda0b.svg" alt="Tag" /></a></li>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Code_Layout.html"><img src="https://img.shields.io/badge/-Code_Layout-e41098.svg" alt="Tag" /></a></li>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Code_Readability.html"><img src="https://img.shields.io/badge/-Code_Readability-2cbbe2.svg" alt="Tag" /></a></li>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Coding_Guideline.html"><img src="https://img.shields.io/badge/-Coding_Guideline-33ad2a.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Cache.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #3dda0b;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Cache</a>
+</li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Code_Layout.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #e41098;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Code Layout</a>
+</li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Code_Readability.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #2cbbe2;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Code Readability</a>
+</li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Coding_Guideline.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #33ad2a;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Coding Guideline</a>
+</li>
 </ul>
 <p>D</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Decorator.html"><img src="https://img.shields.io/badge/-Decorator-1549c6.svg" alt="Tag" /></a></li>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Design.html"><img src="https://img.shields.io/badge/-Design-eee6bb.svg" alt="Tag" /></a></li>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Design_Pattern.html"><img src="https://img.shields.io/badge/-Design_Pattern-9e89d7.svg" alt="Tag" /></a></li>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Domain_Types.html"><img src="https://img.shields.io/badge/-Domain_Types-400cdb.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Decorator.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #1549c6;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Decorator</a>
+</li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Design.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #eee6bb;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Design</a>
+</li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Design_Pattern.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #9e89d7;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Design Pattern</a>
+</li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Domain_Types.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #400cdb;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Domain Types</a>
+</li>
 </ul>
 <p>E</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Emergent_Behaviour.html"><img src="https://img.shields.io/badge/-Emergent_Behaviour-80b3ec.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Emergent_Behaviour.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #80b3ec;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Emergent Behaviour</a>
+</li>
 </ul>
 <p>F</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/for.html"><img src="https://img.shields.io/badge/-for-8fd55c.svg" alt="Tag" /></a></li>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/foreach.html"><img src="https://img.shields.io/badge/-foreach-731fa0.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/for.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #8fd55c;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">for</a>
+</li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/foreach.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #731fa0;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">foreach</a>
+</li>
 </ul>
 <p>G</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/goto.html"><img src="https://img.shields.io/badge/-goto-29c802.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/goto.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #29c802;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">goto</a>
+</li>
 </ul>
 <p>I</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Iteration.html"><img src="https://img.shields.io/badge/-Iteration-df93a4.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Iteration.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #df93a4;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Iteration</a>
+</li>
 </ul>
 <p>L</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Looping.html"><img src="https://img.shields.io/badge/-Looping-497012.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/LINQ.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #2e09d3;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">LINQ</a>
+</li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Looping.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #497012;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Looping</a>
+</li>
 </ul>
 <p>R</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Refactoring.html"><img src="https://img.shields.io/badge/-Refactoring-c6dc6b.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Refactoring.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #c6dc6b;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Refactoring</a>
+</li>
 </ul>
 <p>S</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Single_Responsibility_Principle.html"><img src="https://img.shields.io/badge/-Single_Responsibility_Principle-27d630.svg" alt="Tag" /></a></li>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/SOLID.html"><img src="https://img.shields.io/badge/-SOLID-815bee.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Single_Responsibility_Principle.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #27d630;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Single Responsibility Principle</a>
+</li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/SOLID.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #815bee;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">SOLID</a>
+</li>
 </ul>
 <p>T</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Tools.html"><img src="https://img.shields.io/badge/-Tools-5d59a2.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Tools.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #5d59a2;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Tools</a>
+</li>
 </ul>
 <p>W</p>
 <ul>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/while.html"><img src="https://img.shields.io/badge/-while-6dd666.svg" alt="Tag" /></a></li>
-<li><a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Wrapper.html"><img src="https://img.shields.io/badge/-Wrapper-7d8750.svg" alt="Tag" /></a></li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/while.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #6dd666;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">while</a>
+</li>
+<li>
+<a href="http://firstclassthoughts.co.uk/CodeQualityAndReadability/Tags/Wrapper.html" style="
+color: #ffffff;
+margin: 1px 1px 1px 1px;
+padding: 2px 8px;
+background-color: #7d8750;
+display: inline-block;
+font-size: 12px;
+border-radius: 4px;">Wrapper</a>
+</li>
 </ul>
 <p><br>
 <br>
