Added new article "From imperative to declarative code using LINQ extension methods"

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <link href="http://firstclassthoughts.co.uk/atelier-forest-light.css" type ="text/css" rel="stylesheet" />
-
-<link href="http://firstclassthoughts.co.uk/github-markdown.css" type ="text/css" rel="stylesheet" >
+<link href="http://firstclassthoughts.co.uk/github-markdown.css" type ="text/css" rel="stylesheet">
 <link rel='shortcut icon' type='image/x-icon' href='http://firstclassthoughts.co.uk/favicon.ico'/>
 <style>
       .markdown-body {
@@ -39,7 +38,8 @@
 <p><em>A site providing information on achieving super readable and maintainable code.</em></p>
 <p>Newest articles</p>
 <ul>
-<li><a href="Articles/Readability/RestrictExpressibilityWhenIterating.html">Restrict expressibility when iterating (new)</a></li>
+<li><a href="Articles/Readability/FromImperativeTtoDeclarativeCodeUsingLINQ.html">From imperative to declarative code using LINQ extension methods</a> <img src="img/new.gif"></li>
+<li><a href="Articles/Readability/RestrictExpressibilityWhenIterating.html">Restrict expressibility when iterating</a> <img src="img/new.gif"></li>
 <li><a href="Articles/Readability/ProductivityFeaturesThatMayRuinCodeReadability.html">Productivity features that may ruin code readability</a></li>
 <li><a href="Articles/Readability/OptimalIndentSizeForCodeReadability.html">Optimal indent size for code readability</a></li>
 </ul>
