--- a/AllArticles.html
+++ b/AllArticles.html
@@ -4,8 +4,7 @@
 
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <link href="http://firstclassthoughts.co.uk/atelier-forest-light.css" type ="text/css" rel="stylesheet" />
-
-<link href="http://firstclassthoughts.co.uk/github-markdown.css" type ="text/css" rel="stylesheet" >
+<link href="http://firstclassthoughts.co.uk/github-markdown.css" type ="text/css" rel="stylesheet">
 <link rel='shortcut icon' type='image/x-icon' href='http://firstclassthoughts.co.uk/favicon.ico'/>
 <style>
       .markdown-body {
@@ -49,6 +48,7 @@
 </ul>
 <p><strong>Articles/Readability</strong></p>
 <ul>
+<li><a href="Articles/Readability/FromImperativeTtoDeclarativeCodeUsingLINQ.html">From imperative to declarative code using LINQ extension methods</a></li>
 <li><a href="Articles/Readability/TheChangingNotionOfReadability.html">On the changing notion of code readability</a></li>
 <li><a href="Articles/Readability/OptimalIndentSizeForCodeReadability.html">Optimal indent size for code readability</a></li>
 <li><a href="Articles/Readability/ProductivityFeaturesThatMayRuinCodeReadability.html">Productivity features that may ruin code readability</a></li>
