Added "The 6 best practices for writing LINQ extension methods"

--- a/AllArticles.html
+++ b/AllArticles.html
@@ -4,7 +4,8 @@
 
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <link href="http://firstclassthoughts.co.uk/atelier-forest-light.css" type ="text/css" rel="stylesheet" />
-<link href="http://firstclassthoughts.co.uk/github-markdown.css" type ="text/css" rel="stylesheet">
+
+<link href="http://firstclassthoughts.co.uk/github-markdown.css" type ="text/css" rel="stylesheet">
 <link rel='shortcut icon' type='image/x-icon' href='http://firstclassthoughts.co.uk/favicon.ico'/>
 <style>
       .markdown-body {
@@ -34,7 +35,7 @@
 <h1 id="code-quality--readability">Code Quality &amp; Readability</h1>
 <p><em>A site (mostly) by Kasper B. Graversen</em>
 <br><a href="http://firstclassthoughts.co.uk/">[Introduction]</a> <a href="http://firstclassthoughts.co.uk/AllTags.html">[All categories]</a> <a href="http://firstclassthoughts.co.uk/AllArticles.html">[All articles]</a></p>
-<h2 id="all-articles-on-the-site">All articles on the site</h2>
+<h2 id="all-11-articles-on-the-site">All 11 articles on the site</h2>
 <p><strong>Articles/BookReviews</strong></p>
 <ul>
 <li><a href="Articles/BookReviews/AdaptiveCodeviaCS.html">Book review: Adaptive Code via C#</a></li>
@@ -45,6 +46,7 @@
 <li><a href="Articles/Design/DomainTypeAndEmergentBehaviour.html">Domain types creates readability ...and emergent behaviour</a></li>
 <li><a href="Articles/Design/MalleableCodeUsingDecorators.html">Malleable code by using decorators</a></li>
 <li><a href="Articles/Design/StepwiseRefinementOfCode.html">Stepwise refinement of code</a></li>
+<li><a href="Articles/Design/LINQExtensionMethodsBestPractices.html">The 6 best practices for writing LINQ extension methods</a></li>
 </ul>
 <p><strong>Articles/Readability</strong></p>
 <ul>
@@ -57,6 +59,7 @@
 <p><br>
 <br>
 Read the <a href="http://firstclassthoughts.co.uk/">Introduction</a> or browse the rest <a href="http://firstclassthoughts.co.uk/AllArticles.html">of the site</a>
+<br>
 <br></p>
 
 
