--- a/AllTags.html
+++ b/AllTags.html
@@ -4,7 +4,8 @@
 
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <link href="http://firstclassthoughts.co.uk/atelier-forest-light.css" type ="text/css" rel="stylesheet" />
-<link href="http://firstclassthoughts.co.uk/github-markdown.css" type ="text/css" rel="stylesheet">
+
+<link href="http://firstclassthoughts.co.uk/github-markdown.css" type ="text/css" rel="stylesheet">
 <link rel='shortcut icon' type='image/x-icon' href='http://firstclassthoughts.co.uk/favicon.ico'/>
 <style>
       .markdown-body {
@@ -56,6 +57,7 @@
 <p>E</p>
 <ul>
 <li><a href="http://firstclassthoughts.co.uk/Tags/Emergent_Behaviour.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #80b3ec;    display: inline-block;">Emergent Behaviour</a></li>
+<li><a href="http://firstclassthoughts.co.uk/Tags/Extension_Methods.html" style="color: #ffffff; font-size: 12px; margin: 1px 1px 1px 1px; padding: 2px 8px; border-radius: 4px; background-color: #37b535;    display: inline-block;">Extension Methods</a></li>
 </ul>
 <p>F</p>
 <ul>
@@ -96,6 +98,7 @@
 <p><br>
 <br>
 Read the <a href="http://firstclassthoughts.co.uk/">Introduction</a> or browse the rest <a href="http://firstclassthoughts.co.uk/AllArticles.html">of the site</a>
+<br>
 <br></p>
 
 
