--- a/README.html
+++ b/README.html
@@ -4,7 +4,8 @@
 
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 <link href="http://firstclassthoughts.co.uk/atelier-forest-light.css" type ="text/css" rel="stylesheet" />
-<link href="http://firstclassthoughts.co.uk/github-markdown.css" type ="text/css" rel="stylesheet">
+
+<link href="http://firstclassthoughts.co.uk/github-markdown.css" type ="text/css" rel="stylesheet">
 <link rel='shortcut icon' type='image/x-icon' href='http://firstclassthoughts.co.uk/favicon.ico'/>
 <style>
       .markdown-body {
@@ -34,10 +35,11 @@
 <h1 id="code-quality--readability">Code Quality &amp; Readability</h1>
 <p>By Kasper B. Graversen  </p>
 <p>A site providing information on achieving super readable and maintainable code.</p>
-<p>Notice we have moved. Please go to http://kbilsted.github.io/CodeQualityAndReadability/</p>
+<p>Notice we have moved. Please go to http://firstclassthoughts.co.uk</p>
 <p><br>
 <br>
 Read the <a href="http://firstclassthoughts.co.uk/">Introduction</a> or browse the rest <a href="http://firstclassthoughts.co.uk/AllArticles.html">of the site</a>
+<br>
 <br></p>
 
 
